# paper-digest-obsidian

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: research_interests.yaml  run_demo.ps1
src/paper_digest/: __init__.py  config.py  exceptions.py  http.py  logging.py  models.py  utils.py
src/paper_digest/cli/: app.py
src/paper_digest/knowledge/: common_words.py  linker.py  notes_index.py
src/paper_digest/obsidian_writer/: reindexer.py  renderers.py  writer.py
src/paper_digest/paper_fetcher/: cache.py  fetcher.py
src/paper_digest/paper_images/: extractor.py
src/paper_digest/paper_parser/: pdf_parser.py
src/paper_digest/paper_sources/: arxiv.py  base.py  openalex.py  semantic_scholar.py
src/paper_digest/recommendation/: daily.py  scoring.py
src/paper_digest/research/: profile.py
src/paper_digest/services/: workflow.py
src/paper_digest/summarizer/: base.py  heuristic.py  llm.py  prompts.py
src/paper_digest/templates/: daily_digest.md.j2  paper_full_view.md.j2  paper_note.md.j2  topic_index.md.j2
tests/: test_arxiv_source.py  test_linker.py  test_llm_summarizer.py  test_notes_index.py  test_research_profile.py  test_summarizer.py  test_utils.py  test_writer.py  test_writer_daily.py
tests/fixtures/: arxiv_feed.xml
